:bug: Fix bug with :
Signed-off-by: Emil <amionv99@gmail.com>

--- a/frappe_pwa/translations/ru.csv
+++ b/frappe_pwa/translations/ru.csv
@@ -3,7 +3,7 @@ apps/frappe/frappe/www/install.html ,How to install,Как установить
 apps/frappe/frappe/www/install.html ,Learn how to install this application on your device,Узнайте как установить это приложение на ваш девайс
 apps/frappe/frappe/www/install.html ,This application is actually a Progressive Web App (PWA) that can be directly installed to your device. Learn more about how to install this application on your device:, Это приложение является прогрессивным веб-приложением которое можно установить на ваше устройство
 apps/frappe/frappe/www/install.html ,Install on iOS, Установка на iOS
-apps/frappe/frappe/www/install.html ,To install a PWA on your Home Screen follow these steps, Чтобы установить PWA на ваш рабочий стол следуйте этим шагам
+apps/frappe/frappe/www/install.html ,To install a PWA on your Home Screen follow these steps:, Чтобы установить PWA на ваш рабочий стол следуйте этим шагам:
 apps/frappe/frappe/www/install.html ,Tap the 'Share' button of 'Safari', Нажмите кнопку `Поделиться` в браузере 'Safari'
 apps/frappe/frappe/www/install.html ,Tap the icon labeled 'Add to Home Screen', Нажмите на кнопку 'Добавить на домашний экран'
 apps/frappe/frappe/www/install.html ,Tap 'Add' in the upper-right corner, Нажмите на кнопку 'Добавить' в углу справа наверху
