:bug: Remove colon in FR translation
Signed-off-by: mathieu.brunot <mathieu.brunot@monogramm.io>

--- a/frappe_pwa/translations/fr.csv
+++ b/frappe_pwa/translations/fr.csv
@@ -4,7 +4,7 @@ apps/frappe_pwa/frappe_pwa/www/install.html,Install,Installer
 apps/frappe_pwa/frappe_pwa/www/install.html,Learn how to install this application on your device,Découvrez comment installer cette application sur votre appareil
 apps/frappe_pwa/frappe_pwa/www/install.html,This application is actually a Progressive Web App (PWA) that can be directly installed to your device. Learn more about how to install this application on your device:,Cette application est une Progressive Web App (PWA) qui peut être directement installée sur votre appareil. Découvrez comment installer cette application sur votre appareil:
 apps/frappe_pwa/frappe_pwa/www/install.html,Install on iOS,Installer sur iOS
-apps/frappe_pwa/frappe_pwa/www/install.html,To install a PWA on your Home Screen follow these steps:,Pour installer une PWA sur votre écran d'accueil, procédez comme suit:
+apps/frappe_pwa/frappe_pwa/www/install.html,To install a PWA on your Home Screen follow these steps:,Pour installer une PWA sur votre écran d'accueil procédez comme suit:
 apps/frappe_pwa/frappe_pwa/www/install.html,Tap the 'Share' button of 'Safari',Appuyez sur le bouton "Partager" de "Safari"
 apps/frappe_pwa/frappe_pwa/www/install.html,Tap the icon labeled 'Add to Home Screen',Appuyez sur l'icône intitulé "Ajouter à l'écran d'accueil"
 apps/frappe_pwa/frappe_pwa/www/install.html,Tap 'Add' in the upper-right corner,Appuyez sur "Ajouter" dans le coin supérieur droit
